# ai-spec-sdk

./: .gitignore  AGENTS.md  README.md  TODO.md  bunfig.toml  install.sh  package.json  test-cron.ts  test-validation.ts  tmp_test.txt  tsconfig.json
.spec-driven/: config.yaml
.strict-spec-driven/: config.yaml
clients/python/: pyproject.toml
clients/python/src/ai_spec_sdk/: __init__.py  client.py  errors.py  events.py  types.py
clients/python/src/ai_spec_sdk/transports/: __init__.py  base.py  http.py  stdio.py  ws.py
clients/python/tests/: conftest.py  test_client.py  test_http_transport.py  test_stdio_transport.py  test_types.py  test_ws_transport.py
docs/: bridge-contract.md  bridge-contract.yaml  roadmap.md
homebrew/: ai-spec-sdk.rb
scripts/: build-native-all.sh  build.sh  check.sh  clean.sh  generate-types.ts  release-check.sh  test.sh
src/: agent-cli.ts  agent-state-machine.ts  approval-store.ts  audit-log.ts  auth.ts  bridge.js  bridge.ts  built-in-tools.ts  capabilities.js  capabilities.ts  claude-agent-runner.js  claude-agent-runner.ts  cli.js  cli.ts  config-store.ts  context-store.ts  cron-scheduler.ts  delivery-tracker.ts  errors.js  errors.ts  hooks-store.ts  http-server.ts  index.js  index.ts  key-store.ts  logger.ts  lsp-client.ts  lsp-tools.ts  lsp-types.ts  mcp-store.ts  metrics.ts  permission-policy.ts  permission-scopes.ts  rate-limiter.ts  role-store.ts  runtime-info.ts  session-store.js  session-store.ts  task-queue-store.ts  task-queue-worker.ts  (+10 more)
test/: agent-cli.test.ts  agent-state-machine.test.ts  anthropic-adapter.test.ts  (+56 more)
(+1210 files in other folders)
